# ModellingOfPhysicalSystems

./: .gitignore  README.md  cicd.ipynb  pyproject.toml  requirements.txt
.github/workflows/: on_push.yml
lab1-pint/: introduction_to_pint.ipynb
lab2-cicd/: concentration_distribution.ipynb  pint_and_boiling_point.ipynb
lab3-advection-upwind/: advection_upwind.ipynb
lab4-diffusion-eq/: diffusion_eq.ipynb
lab5-advection-mpdata/: advection_mpdata.ipynb
lab6-stochastic-adv/: stochasticadv.ipynb
tutorial/: pyMpData_tutorial.ipynb  pySDM_tutorial.ipynb
