[project]
name = "ModellingOfPhysicalSystems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "nbqa>=1.9.1",
    "numba>=0.61.2",
    "numpy>=2.2.3",
    "open-atmos-jupyter-utils>=1.3.0",
    "pint>=0.24.4",
    "pympdata>=1.4.0",
    "scipy>=1.15.2",
]
